# game-playing-ai-balatro

./: .cursorrules  .editorconfig  .gitignore  .gitmodules  .pylintrc  AGENTS.md  CLAUDE.md  DUAL_YOLO_README.md  README.md  cspell.config.yaml  example_usage.py  pixi.toml  pyproject.toml  quick_test_visualization.py  ruff.toml  run_screen_demo.py  test_dual_yolo_models.py  test_yolo_visualization.py
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/: README.md  USAGE.md  __init__.py  ai_decision.py  app.py  auto_control.py  balatro_ai_bot.py  config_example.json  debug_window_detection.py  game_state.py  main.py  ocr_benchmark_cli.py  requirements.txt  run_bot.py  screen_capture.py  screen_detection_demo.py  test_modules.py  test_window_detection.py  yolo_detector.py
apps/ai/: __init__.py
apps/config/: config.yaml  settings.py
apps/core/: detection.py  screen_capture.py  yolo_detector.py
apps/notebooks/: OCR-PaddlePaddle-PP-OCRv5.ipynb  OCR-RapidOCR.ipynb  VLM-AIDC-AI-Ovis2.5.ipynb  VLM-apple-FastVLM.ipynb
apps/ocr/: engines.py  llm_judge.py  metrics.py
apps/pipelines/: ocr_descriptions_pipeline.py  ocr_e2e_pipeline.py
apps/services/: __init__.py  auto_click_service.py  card_tooltip_service.py  detection_service.py
apps/tests/: __init__.py  test_card_tooltip_service.py  test_image_cropper.py  test_ocr_engines.py  test_utils.py
apps/ui/: __init__.py  demo_app.py
apps/utils/: image_cropper.py  logger.py  path_utils.py
cli/: export-ocr-benchmark-metrics.py  export-onnx.py  run-ai-balatro.py
cli/label-studio/: export-yolo.py
cli/ocr-benchmark/: main.py
clis/: __init__.py
clis/ocr_benchmark/: main.py
configs/v1-balatro-entities/: dataset.yaml
configs/v1-balatro-poc/: dataset.yaml
configs/v1-balatro-ui/: dataset.yaml
configs/v2-balatro-entities/: dataset.yaml
docs/ai/designs/: 2025-09-22-initial-plans.md  2025-09-22-multi-modal-balatro-ai-system-design.md  2025-09-22-vlm-yolo-integration-findings.md  2025-09-23-ai-llm-architecture.md  2025-09-24-agent-framework-architecture.md  2025-09-24-implementation-spec.md  2025-09-25-card-actions-refactoring.md  2025-09-25-improved-architecture.md  2025-10-06-new-card-action-functions.md
examples/: action_demo.py  llm_reasoning_demo.py
notebooks/benchmark/: OCR-PaddlePaddle-PP-OCRv5.ipynb  OCR-RapidOCR.ipynb  VLM-AIDC-AI-Ovis2.5.ipynb  VLM-apple-FastVLM.ipynb
notebooks/train/: Export.ipynb  Train.ipynb
scripts/: export-datasets.py  export-onnx.py  ocr_plot_metrics.py
scripts/label-studio/: export-yolo.py
src/: main.py
src/agent/: main.py
src/agent/config/: config.yaml
src/agent/core/: __init__.py  detection.py  screen_capture.py
src/agent/ocr/: engines.py  llm_judge.py  metrics.py
src/ai_balatro_train/: main.py
src/clis/: export-datasets.py  export-onnx.py  ocr_plot_metrics.py
src/notebooks/: Train.ipynb
tests/: __init__.py  test_action_module.py  test_card_text_parser.py  test_card_tooltip_service.py  test_image_cropper.py  test_ocr_engines.py  test_text_extractor.py
tests/integration/: __init__.py  test_agent_framework.py
tests/unit/: __init__.py  test_memory.py  test_providers.py  test_templates.py  test_ui_text_service.py
(+57 files in other folders)
