[project]
authors = [{name = "Neko Ayaka", email = "neko@ayaka.moe"}]
name = "game-playing-ai-balatro"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
  "ultralytics>=8.3.203,<9",
  "wandb>=0.22.0,<0.23",
  "matplotlib>=3.10.6,<4",
  "numpy>=2.3.3,<3",
  "opencv-python>=4.11.0.86,<5",
  "ipykernel>=6.30.1,<7",
  "label-studio-sdk>=2.0.5,<3",
  "onnx>=1.19.0,<2",
  "onnxslim>=0.1.69,<0.2",
  "onnxruntime>=1.22.1,<2",
  "pillow>=11.3.0,<12",
  "pyautogui>=0.9.54,<0.10",
  "mss>=10.1.0,<11",
  "openai>=1.109.0,<2",
  "anthropic>=0.68.0,<0.69",
  "transformers>=4.56.2,<5",
  "timm>=1.0.20,<2",
  "accelerate>=1.10.1,<2",
  "pyyaml>=6.0.2,<7",
  "pytest>=8.4.2,<9",
  "flake8>=7.3.0,<8",
  "pytesseract>=0.3.13,<0.4",
  "paddleocr>=3.2.0,<4",
  "rapidocr>=3.4.1,<4"
, "tqdm>=4.67.1,<5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.tasks]
dev = "python cli/run-ai-balatro.py"
start-benchmark = "python cli/ocr-benchmark/main.py --images-dir data/datasets/games-balatro-2024-entities-detection/data/train/yolo/images/ --targets out_00104.jpg out_00166.jpg out_00114.jpg --lang \"en,ch_sim\""
fmt = "ruff format ."
lint = "ruff check ."
ruff-check = "ruff check . --fix"
style = { depends-on = ["fmt", "ruff-check", "lint"] }
test = "pytest tests/ -v"
quality = { depends-on = ["style", "test"] }

[tool.pixi.dependencies]
python = "3.13.*"
pip = ">=25.2,<26"
ruff = ">=0.13.1,<0.14"
# Due to:
#
# Compatibility with CMake < 3.5 has been removed from CMake.
#
# Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
# to tell CMake that the project requires at least <min> but has been updated
# to work with policies introduced by <max> or earlier.
#
# Or, add -DCMAKE_POLICY_VERSION_MINIMUM=3.5 to try configuring anyway.
#
# https://github.com/onnx/optimizer/issues/204#issuecomment-3086769558
cmake = "3.*"
tesseract = ">=5.5.1,<6"

[tool.pixi.target.linux-64.dependencies]
cuda = ">=13.0.1,<14"
cuda-cupti = ">=13.0.85,<14"
cuda-libraries-dev = ">=13.0.1,<14"
cuda-nvcc = ">=13.0.88,<14"
cuda-nvtx = ">=13.0.85,<14"

[tool.pixi.target.linux-64.pypi-dependencies]
torch = { version = ">=2.8.0, <3", index = "https://download.pytorch.org/whl/cu129" }
torchvision = { version = ">=0.23.0, <0.24", index = "https://download.pytorch.org/whl/cu129" }
paddlepaddle = ">=3.2.0, <4"

[tool.pixi.target.win-64.dependencies]
cuda = ">=13.0.1,<14"
cuda-cupti = ">=13.0.85,<14"
cuda-libraries-dev = ">=13.0.1,<14"
cuda-nvcc = ">=13.0.88,<14"

[tool.pixi.target.win-64.pypi-dependencies]
torch = { version = ">=2.8.0, <3", index = "https://download.pytorch.org/whl/cu129" }
torchvision = { version = ">=0.23.0, <0.24", index = "https://download.pytorch.org/whl/cu129" }
paddlepaddle = ">=3.2.0, <4"

[tool.pixi.target.osx-arm64.pypi-dependencies]
pyobjc = ">=11.1, <12"
torch = ">=2.8.0, <3"
torchvision = ">=0.23.0, <0.24"
paddlepaddle = ">=3.2.0, <4"
pynput = ">=1.8.1,<2"
